--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-    <title>Full-Screen Excel Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Excel Dashboard Viewer</title>
     <style>
-        /* Complete CSS reset */
         html, body {
             margin: 0;
             padding: 0;
@@ -13,48 +12,44 @@
             height: 100%;
             overflow: hidden;
             position: fixed;
-            background: #f4f4f9;
         }
 
-        /* Full-screen container with overflow control */
         .container {
             position: fixed;
-            top: -15px;
-            left: -15px;
-            width: calc(100% + 30px);
-            height: calc(100% + 30px);
+            top: -8px;
+            left: -8px;
+            width: calc(100% + 16px);
+            height: calc(100% + 16px);
             overflow: hidden;
-            transform: scale(0.965);
+            transform: scale(0.98);
             transform-origin: top left;
         }
 
-        /* Iframe styling with zoom compensation */
         iframe {
-            position: absolute;
-            width: calc(100% + 30px);
-            height: calc(100% + 30px);
+            width: calc(100% + 20px);
+            height: calc(100% + 20px);
             border: none;
-            margin: 0;
-            padding: 0;
-            transform: scale(1.035);
+            transform: scale(1.02);
             transform-origin: 0 0;
             pointer-events: auto;
-        }
-
-        /* Mobile touch behavior control */
-        @media (hover: none) and (pointer: coarse) {
-            .container {
-                touch-action: none;
-                -webkit-overflow-scrolling: auto;
-            }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <iframe 
-            src="https://onedrive.live.com/embed?resid=7802B28B69080BF4%2119384&authkey=%21AFum8Khb0qO9530&em=2&AllowTyping=False&wdAllowInteractivity=True&ActiveCell='Dashboard'!A1&Item='Dashboard'!A1%3AAB32&wdHideGridlines=True&wdDownloadButton=False&wdHideHeaders=True&wdHideSheetTabs=True&wdHideBorder=True&wdHideFormulaBar=True&wdHideWorkbookViews=True&wdEmbedCode=True">
-        </iframe>
+        <iframe src="https://onedrive.live.com/embed?resid=7802B28B69080BF4%2119384&authkey=%21AFum8Khb0qO9530&em=2&wdAllowInteractivity=True&ActiveCell='Dashboard'!A1&Item='Dashboard'!A1%3AAB31&wdHideGridlines=True&wdDownloadButton=False&wdHideHeaders=True&wdHideSheetTabs=True&wdHideBorder=True&wdHideFormulaBar=True&wdInConfigurator=True&wdframeborder=0&wdView=2"></iframe>
     </div>
+
+    <script>
+        // Mobile viewport hack
+        (function() {
+            function resetViewport() {
+                const meta = document.querySelector('meta[name="viewport"]');
+                meta.content = 'width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no';
+            }
+            window.addEventListener('resize', resetViewport);
+            resetViewport();
+        })();
+    </script>
 </body>
 </html>
